fix link and menu z-index

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -52,6 +52,7 @@
       }
 
       &__link {
+        display: block;
         text-decoration: none;
         font-weight: 700;
         color: $main-text-color;
