--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,6 +5,7 @@
   font-weight: 700;
   text-transform: uppercase;
   overflow: auto;
+  z-index: 7;
 
   &__nav {
     margin: 40px 0 32px;
